--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,6 @@
 # Commands to start on workspace startup
 tasks:
-  - init:  npm install
+  - init:  npm install && npm install -g @angular/cli
     command: ng serve -o
 # Ports to expose on workspace startup
 ports:
