TIC-2 completed forbidden page

--- a/ticket-frontend/angular.json
+++ b/ticket-frontend/angular.json
@@ -28,7 +28,7 @@
               "src/styles.css"
             ],
             "scripts": [ "./node_modules/jquery/dist/jquery.min.js",
-            "./node_modules/bootstrap/dist/js/bootstrap.min.js"]
+            "./node_modules/bootstrap/dist/js/bootstrap.min.js", "./node_modules/@lottiefiles/lottie-player/dist/lottie-player.js"]
           },
           "configurations": {
             "production": {
